--- a/birthday_surprises (1).html
+++ b/birthday_surprises (1).html
@@ -615,9 +615,9 @@
   <div class="modal" id="modal-box">
     <span class="modal-icon">🎉</span>
     <h2 class="modal-title">All Birthday Wishes Unlocked!</h2>
-    <p class="modal-body">Each wish carries my love and hopes for your amazing new year ahead. ✨</p>
+    <p class="modal-body">Each wish carries my love and hopes for your amazing new year ahead. ✨ 17 years of you making this world a better place to live and many more to come.</p>
     <button class="modal-btn" onclick="dismissModal()">Open Final Birthday Letter 💌</button>
-    <button class="modal-dismiss" onclick="enjoyLonger()">Enjoy the wishes a bit longer</button>
+   
   </div>
 </div>
 
@@ -807,9 +807,9 @@
         <span class="letter-header-title">Final Birthday Love Letter</span>
       </div>
 
-      <p class="letter-greeting">My dearest girl,</p>
-      <p class="letter-body">May this new year bring you everything your heart desires and more joy than you can imagine.</p>
-      <p class="letter-sign">Happy Birthday, my love. You deserve the world and so much more. 🎂 ✨</p>
+      <p class="letter-greeting">My dearest Daria,</p>
+      <p class="letter-body">May this new year bring you everything your heart desires and more joy than you can imagine.   May you go beyond all your self doubts, achieve what you are meant to. And hopefully you get all the love you give and shine even when life isn't as sweet as you.</p>
+      <p class="letter-sign">Happy Birthday, Daria. You deserve the world and so much more. 🎂 ✨</p>
 
       <div class="letter-footer">
         <span class="letter-footer-note">Sealing will complete your birthday experience.</span>
@@ -832,7 +832,7 @@
     <div id="letter-sealed">
       <div class="sealed-icon">💝</div>
       <h2 class="sealed-title">Birthday Letter Sealed with Love</h2>
-      <p class="sealed-sub">Happy Birthday, My Everything 🎊</p>
+      <p class="sealed-sub">Happy Birthday, Madam Jiiiiiiii 🎊</p>
       <div class="sealed-hearts">
         <span class="seal-heart">♡</span>
         <span class="seal-heart">♡</span>
